# reading-log

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
.agent/rules/: code-style-guide.md  general-instructions.md
reading_log/: __init__.py  __main__.py  app.py  config.py  config.sample.toml  data_handler.py  validators.py
reading_log/static/: app.js  style.css
reading_log/templates/: index.html
src/: data_handler.py  gui.py
static/: app.js  style.css
