[project]
name = "reading-log"
version = "0.1.0"
description = "Reading Log Web Application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.2",
]

[project.scripts]
reading-log = "reading_log.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reading_log"]

[tool.hatch.build.targets.wheel.force-include]
"reading_log/config.sample.toml" = "reading_log/config.sample.toml"

